--- a/list.html
+++ b/list.html
@@ -19,5 +19,6 @@
             <input type="submit" value="上传">
         </form>
         <a style="position: absolute; left: 5px; top: 5px;" href="./clear"> 清空</a>
+        <h1 style="color: red;">上传成功后文件会自动出现在此列表，请勿中途刷新或取消！！！</h1>
     </body>
 </html>
